Website refresh 2.9 - fixing contact and team align (#126)

--- a/_sass/_connect.scss
+++ b/_sass/_connect.scss
@@ -62,7 +62,7 @@ a.connectText:link {
   text-decoration: none;
   font-weight: 500;
   font-size: 18px;
-  display: Inline;
+  display: inline-block;
 }
 
 a.connectText:visited {
@@ -70,7 +70,7 @@ a.connectText:visited {
   text-decoration: none;
   font-weight: 500;
   font-size: 18px;
-  display: inline;
+  display: inline-block;
 }
 
 a.connectText:hover {
